# Traderhelpernew

./: .gitignore  =2.0.0  AUTOMATED_SIGNALS_CHANGES.md  AUTOMATED_SIGNALS_INTEGRATION.md  AUTOMATED_SIGNALS_TAB_USAGE.md  BINANCE_INTEGRATION_IMPLEMENTATION.md  BINANCE_ROBUSTNESS_AUTOREFRESH.md  CHANGELOG_ENHANCEMENTS.md  CHANGES_SUMMARY.md  CHART_AUTO_REFRESH_FIX_SUMMARY.md  DEVELOPMENT.md  ENHANCEMENTS_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  QA_AUTOMATED_SIGNALS_TAB.md  QUICKSTART.md  README.md  REAL_DATA_ENHANCEMENTS.md  TICKET_IMPLEMENTATION.md  TRADINGVIEW_IMPLEMENTATION_SUMMARY.md  automated_signals_worker.py  backtest_utils.py  bybit_client.py  chart_auto_refresh.py  check_ast.py  config.py  config_store.py  demo_backtest_adaptive_weights.py  demo_sentiment_analyzer.py  demo_statistics_optimizer.py  example_automated_signals_demo.py  example_trading_system_usage.py  exceptions.py  health_checker.py  logging_config.py  main.py  models.py  pyproject.toml  requirements.txt  run_web_ui.sh  (+13 more)
indicator_collector/: __init__.py  advanced_metrics.py  astrology.py  cli.py  cme_gap.py  collector.py  data_fetcher.py  indicator_metrics.py  market_context.py  market_maker_detection.py  math_utils.py  real_data_validator.py  time_series.py  timeframes.py  trade_signals.py  trading_cli.py  types.py
metrics/: __init__.py  collectors.py
samples/: BACKTESTING_WORKFLOW.md  README.md  TEST_COVERAGE_GUIDE.md  example_buy_signal.json  example_neutral_signal.json  example_sell_signal.json  macro_filter_config.json  trading_signal_schema.json
(+52 files in other folders)
