[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indicator-collector"
version = "0.1.0"
description = "Indicator metrics collection toolkit for trading automation and analytics."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Indicator Collector Team" },
]
dependencies = [
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "streamlit-autorefresh>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[tool.setuptools.packages.find]
include = ["indicator_collector*"]
